LilypondParser.java
// Generated from Lilypond.g4 by ANTLR 4.9.3
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class LilypondParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, STAFF_CTX=5, STAFFGROUP_CTX=6, VOICE_CTX=7, 
		BOOK_KW=8, HEADER_KW=9, LAYOUT_KW=10, SCORE_KW=11, WITH_KW=12, VERSION_KW=13, 
		SCHEME_GP=14, SCHEME_ATOM=15, BAR_KW=16, CLEF_KW=17, DEFAULT_KW=18, FERMATA_KW=19, 
		KEY_KW=20, MARK_KW=21, MODE_KW=22, MODE_MAJ=23, MODE_MIN=24, RELATIVE_KW=25, 
		TEMPO_KW=26, TIME_KW=27, KW=28, NOTE=29, TIME_SIG=30, TEMPO_EQN=31, OCTAVE=32, 
		BARLINE=33, ID=34, STRING=35, VERSION_STR=36, HASH=37, LBRACE=38, RBRACE=39, 
		SLASH=40, INTEGER=41, COMMENT_MULTILINE=42, COMMENT_INLINE=43, WS=44, 
		ALL=45;
	public static final int
		RULE_score_file = 0, RULE_book_block = 1, RULE_header_block = 2, RULE_score_block = 3, 
		RULE_staffgroup_block = 4, RULE_staff_block = 5, RULE_prefix_block = 6, 
		RULE_with_block = 7, RULE_voice_block = 8, RULE_note_block = 9, RULE_relative_block = 10, 
		RULE_polyphony_block = 11, RULE_scheme_cmd = 12, RULE_note_cmd = 13, RULE_bar_cmd = 14, 
		RULE_clef_cmd = 15, RULE_fermata_cmd = 16, RULE_key_cmd = 17, RULE_mark_cmd = 18, 
		RULE_tempo_cmd = 19, RULE_time_cmd = 20, RULE_version_cmd = 21, RULE_assignment = 22;
	private static String[] makeRuleNames() {
		return new String[] {
			"score_file", "book_block", "header_block", "score_block", "staffgroup_block", 
			"staff_block", "prefix_block", "with_block", "voice_block", "note_block", 
			"relative_block", "polyphony_block", "scheme_cmd", "note_cmd", "bar_cmd", 
			"clef_cmd", "fermata_cmd", "key_cmd", "mark_cmd", "tempo_cmd", "time_cmd", 
			"version_cmd", "assignment"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'<<'", "'>>'", "'\\\\'", "'='", "'\\new Staff'", "'\\new StaffGroup'", 
			"'\\new Voice'", "'\\book'", "'\\header'", "'\\layout'", "'\\score'", 
			"'\\with'", "'\\version'", null, null, "'\\bar'", "'\\clef'", "'\\default'", 
			"'\\fermata'", "'\\key'", "'\\mark'", null, "'\\major'", "'\\minor'", 
			"'\\relative'", "'\\tempo'", "'\\time'", null, null, null, null, null, 
			null, null, null, null, "'#'", "'{'", "'}'", "'\\'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, "STAFF_CTX", "STAFFGROUP_CTX", "VOICE_CTX", 
			"BOOK_KW", "HEADER_KW", "LAYOUT_KW", "SCORE_KW", "WITH_KW", "VERSION_KW", 
			"SCHEME_GP", "SCHEME_ATOM", "BAR_KW", "CLEF_KW", "DEFAULT_KW", "FERMATA_KW", 
			"KEY_KW", "MARK_KW", "MODE_KW", "MODE_MAJ", "MODE_MIN", "RELATIVE_KW", 
			"TEMPO_KW", "TIME_KW", "KW", "NOTE", "TIME_SIG", "TEMPO_EQN", "OCTAVE", 
			"BARLINE", "ID", "STRING", "VERSION_STR", "HASH", "LBRACE", "RBRACE", 
			"SLASH", "INTEGER", "COMMENT_MULTILINE", "COMMENT_INLINE", "WS", "ALL"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Lilypond.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public LilypondParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class Score_fileContext extends ParserRuleContext {
		public List<Header_blockContext> header_block() {
			return getRuleContexts(Header_blockContext.class);
		}
		public Header_blockContext header_block(int i) {
			return getRuleContext(Header_blockContext.class,i);
		}
		public List<Book_blockContext> book_block() {
			return getRuleContexts(Book_blockContext.class);
		}
		public Book_blockContext book_block(int i) {
			return getRuleContext(Book_blockContext.class,i);
		}
		public List<Score_blockContext> score_block() {
			return getRuleContexts(Score_blockContext.class);
		}
		public Score_blockContext score_block(int i) {
			return getRuleContext(Score_blockContext.class,i);
		}
		public List<Version_cmdContext> version_cmd() {
			return getRuleContexts(Version_cmdContext.class);
		}
		public Version_cmdContext version_cmd(int i) {
			return getRuleContext(Version_cmdContext.class,i);
		}
		public List<Scheme_cmdContext> scheme_cmd() {
			return getRuleContexts(Scheme_cmdContext.class);
		}
		public Scheme_cmdContext scheme_cmd(int i) {
			return getRuleContext(Scheme_cmdContext.class,i);
		}
		public Score_fileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_score_file; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LilypondListener ) ((LilypondListener)listener).enterScore_file(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LilypondListener ) ((LilypondListener)listener).exitScore_file(this);
		}
	}

	public final Score_fileContext score_file() throws RecognitionException {
		Score_fileContext _localctx = new Score_fileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_score_file);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(51); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(51);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case HEADER_KW:
					{
					setState(46);
					header_block();
					}
					break;
				case BOOK_KW:
					{
					setState(47);
					book_block();
					}
					break;
				case SCORE_KW:
					{
					setState(48);
					score_block();
					}
					break;
				case VERSION_KW:
					{
					setState(49);
					version_cmd();
					}
					break;
				case SCHEME_GP:
				case SCHEME_ATOM:
					{
					setState(50);
					scheme_cmd();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(53); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << BOOK_KW) | (1L << HEADER_KW) | (1L << SCORE_KW) | (1L << VERSION_KW) | (1L << SCHEME_GP) | (1L << SCHEME_ATOM))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Book_blockContext extends ParserRuleContext {
		public TerminalNode BOOK_KW() { return getToken(LilypondParser.BOOK_KW, 0); }
		public TerminalNode LBRACE() { return getToken(LilypondParser.LBRACE, 0); }
		public Score_blockContext score_block() {
			return getRuleContext(Score_blockContext.class,0);
		}
		public TerminalNode RBRACE() { return getToken(LilypondParser.RBRACE, 0); }
		public Book_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_book_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LilypondListener ) ((LilypondListener)listener).enterBook_block(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LilypondListener ) ((LilypondListener)listener).exitBook_block(this);
		}
	}

	public final Book_blockContext book_block() throws RecognitionException {
		Book_blockContext _localctx = new Book_blockContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_book_block);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(55);
			match(BOOK_KW);
			setState(56);
			match(LBRACE);
			setState(57);
			score_block();
			setState(58);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Header_blockContext extends ParserRuleContext {
		public TerminalNode HEADER_KW() { return getToken(LilypondParser.HEADER_KW, 0); }
		public TerminalNode LBRACE() { return getToken(LilypondParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(LilypondParser.RBRACE, 0); }
		public List<AssignmentContext> assignment() {
			return getRuleContexts(AssignmentContext.class);
		}
		public AssignmentContext assignment(int i) {
			return getRuleContext(AssignmentContext.class,i);
		}
		public Header_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_header_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LilypondListener ) ((LilypondListener)listener).enterHeader_block(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LilypondListener ) ((LilypondListener)listener).exitHeader_block(this);
		}
	}

	public final Header_blockContext header_block() throws RecognitionException {
		Header_blockContext _localctx = new Header_blockContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_header_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(60);
			match(HEADER_KW);
			setState(61);
			match(LBRACE);
			setState(65);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ID) {
				{
				{
				setState(62);
				assignment();
				}
				}
				setState(67);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(68);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Score_blockContext extends ParserRuleContext {
		public TerminalNode SCORE_KW() { return getToken(LilypondParser.SCORE_KW, 0); }
		public TerminalNode LBRACE() { return getToken(LilypondParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(LilypondParser.RBRACE, 0); }
		public List<Staff_blockContext> staff_block() {
			return getRuleContexts(Staff_blockContext.class);
		}
		public Staff_blockContext staff_block(int i) {
			return getRuleContext(Staff_blockContext.class,i);
		}
		public List<Staffgroup_blockContext> staffgroup_block() {
			return getRuleContexts(Staffgroup_blockContext.class);
		}
		public Staffgroup_blockContext staffgroup_block(int i) {
			return getRuleContext(Staffgroup_blockContext.class,i);
		}
		public Score_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_score_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LilypondListener ) ((LilypondListener)listener).enterScore_block(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LilypondListener ) ((LilypondListener)listener).exitScore_block(this);
		}
	}

	public final Score_blockContext score_block() throws RecognitionException {
		Score_blockContext _localctx = new Score_blockContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_score_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70);
			match(SCORE_KW);
			setState(71);
			match(LBRACE);
			setState(76);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==STAFF_CTX || _la==STAFFGROUP_CTX) {
				{
				setState(74);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case STAFF_CTX:
					{
					setState(72);
					staff_block();
					}
					break;
				case STAFFGROUP_CTX:
					{
					setState(73);
					staffgroup_block();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(78);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(79);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Staffgroup_blockContext extends ParserRuleContext {
		public TerminalNode STAFFGROUP_CTX() { return getToken(LilypondParser.STAFFGROUP_CTX, 0); }
		public List<Staff_blockContext> staff_block() {
			return getRuleContexts(Staff_blockContext.class);
		}
		public Staff_blockContext staff_block(int i) {
			return getRuleContext(Staff_blockContext.class,i);
		}
		public Staffgroup_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_staffgroup_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LilypondListener ) ((LilypondListener)listener).enterStaffgroup_block(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LilypondListener ) ((LilypondListener)listener).exitStaffgroup_block(this);
		}
	}

	public final Staffgroup_blockContext staffgroup_block() throws RecognitionException {
		Staffgroup_blockContext _localctx = new Staffgroup_blockContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_staffgroup_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			match(STAFFGROUP_CTX);
			setState(82);
			match(T__0);
			setState(86);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==STAFF_CTX) {
				{
				{
				setState(83);
				staff_block();
				}
				}
				setState(88);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(89);
			match(T__1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Staff_blockContext extends ParserRuleContext {
		public TerminalNode STAFF_CTX() { return getToken(LilypondParser.STAFF_CTX, 0); }
		public TerminalNode LBRACE() { return getToken(LilypondParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(LilypondParser.RBRACE, 0); }
		public With_blockContext with_block() {
			return getRuleContext(With_blockContext.class,0);
		}
		public Prefix_blockContext prefix_block() {
			return getRuleContext(Prefix_blockContext.class,0);
		}
		public List<Note_blockContext> note_block() {
			return getRuleContexts(Note_blockContext.class);
		}
		public Note_blockContext note_block(int i) {
			return getRuleContext(Note_blockContext.class,i);
		}
		public List<Polyphony_blockContext> polyphony_block() {
			return getRuleContexts(Polyphony_blockContext.class);
		}
		public Polyphony_blockContext polyphony_block(int i) {
			return getRuleContext(Polyphony_blockContext.class,i);
		}
		public List<Voice_blockContext> voice_block() {
			return getRuleContexts(Voice_blockContext.class);
		}
		public Voice_blockContext voice_block(int i) {
			return getRuleContext(Voice_blockContext.class,i);
		}
		public Staff_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_staff_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LilypondListener ) ((LilypondListener)listener).enterStaff_block(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LilypondListener ) ((LilypondListener)listener).exitStaff_block(this);
		}
	}

	public final Staff_blockContext staff_block() throws RecognitionException {
		Staff_blockContext _localctx = new Staff_blockContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_staff_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			match(STAFF_CTX);
			setState(93);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==WITH_KW) {
				{
				setState(92);
				with_block();
				}
			}

			setState(95);
			match(LBRACE);
			setState(97);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				{
				setState(96);
				prefix_block();
				}
				break;
			}
			setState(102); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(102);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case BAR_KW:
				case CLEF_KW:
				case FERMATA_KW:
				case KEY_KW:
				case MARK_KW:
				case RELATIVE_KW:
				case TEMPO_KW:
				case TIME_KW:
				case NOTE:
					{
					setState(99);
					note_block();
					}
					break;
				case T__0:
					{
					setState(100);
					polyphony_block();
					}
					break;
				case VOICE_CTX:
					{
					setState(101);
					voice_block();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(104); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << VOICE_CTX) | (1L << BAR_KW) | (1L << CLEF_KW) | (1L << FERMATA_KW) | (1L << KEY_KW) | (1L << MARK_KW) | (1L << RELATIVE_KW) | (1L << TEMPO_KW) | (1L << TIME_KW) | (1L << NOTE))) != 0) );
			setState(106);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Prefix_blockContext extends ParserRuleContext {
		public Time_cmdContext time_cmd() {
			return getRuleContext(Time_cmdContext.class,0);
		}
		public Prefix_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prefix_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LilypondListener ) ((LilypondListener)listener).enterPrefix_block(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LilypondListener ) ((LilypondListener)listener).exitPrefix_block(this);
		}
	}

	public final Prefix_blockContext prefix_block() throws RecognitionException {
		Prefix_blockContext _localctx = new Prefix_blockContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_prefix_block);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			time_cmd();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class With_blockContext extends ParserRuleContext {
		public TerminalNode WITH_KW() { return getToken(LilypondParser.WITH_KW, 0); }
		public TerminalNode LBRACE() { return getToken(LilypondParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(LilypondParser.RBRACE, 0); }
		public List<AssignmentContext> assignment() {
			return getRuleContexts(AssignmentContext.class);
		}
		public AssignmentContext assignment(int i) {
			return getRuleContext(AssignmentContext.class,i);
		}
		public With_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_with_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LilypondListener ) ((LilypondListener)listener).enterWith_block(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LilypondListener ) ((LilypondListener)listener).exitWith_block(this);
		}
	}

	public final With_blockContext with_block() throws RecognitionException {
		With_blockContext _localctx = new With_blockContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_with_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			match(WITH_KW);
			setState(111);
			match(LBRACE);
			setState(115);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ID) {
				{
				{
				setState(112);
				assignment();
				}
				}
				setState(117);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(118);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Voice_blockContext extends ParserRuleContext {
		public TerminalNode VOICE_CTX() { return getToken(LilypondParser.VOICE_CTX, 0); }
		public TerminalNode LBRACE() { return getToken(LilypondParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(LilypondParser.RBRACE, 0); }
		public List<Note_blockContext> note_block() {
			return getRuleContexts(Note_blockContext.class);
		}
		public Note_blockContext note_block(int i) {
			return getRuleContext(Note_blockContext.class,i);
		}
		public List<Polyphony_blockContext> polyphony_block() {
			return getRuleContexts(Polyphony_blockContext.class);
		}
		public Polyphony_blockContext polyphony_block(int i) {
			return getRuleContext(Polyphony_blockContext.class,i);
		}
		public Voice_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_voice_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LilypondListener ) ((LilypondListener)listener).enterVoice_block(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LilypondListener ) ((LilypondListener)listener).exitVoice_block(this);
		}
	}

	public final Voice_blockContext voice_block() throws RecognitionException {
		Voice_blockContext _localctx = new Voice_blockContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_voice_block);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(120);
			match(VOICE_CTX);
			setState(121);
			match(LBRACE);
			setState(126);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << BAR_KW) | (1L << CLEF_KW) | (1L << FERMATA_KW) | (1L << KEY_KW) | (1L << MARK_KW) | (1L << RELATIVE_KW) | (1L << TEMPO_KW) | (1L << TIME_KW) | (1L << NOTE))) != 0)) {
				{
				setState(124);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case BAR_KW:
				case CLEF_KW:
				case FERMATA_KW:
				case KEY_KW:
				case MARK_KW:
				case RELATIVE_KW:
				case TEMPO_KW:
				case TIME_KW:
				case NOTE:
					{
					setState(122);
					note_block();
					}
					break;
				case T__0:
					{
					setState(123);
					polyphony_block();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(128);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(129);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Note_blockContext extends ParserRuleContext {
		public List<Relative_blockContext> relative_block() {
			return getRuleContexts(Relative_blockContext.class);
		}
		public Relative_blockContext relative_block(int i) {
			return getRuleContext(Relative_blockContext.class,i);
		}
		public List<Note_cmdContext> note_cmd() {
			return getRuleContexts(Note_cmdContext.class);
		}
		public Note_cmdContext note_cmd(int i) {
			return getRuleContext(Note_cmdContext.class,i);
		}
		public List<TerminalNode> NOTE() { return getTokens(LilypondParser.NOTE); }
		public TerminalNode NOTE(int i) {
			return getToken(LilypondParser.NOTE, i);
		}
		public Note_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_note_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LilypondListener ) ((LilypondListener)listener).enterNote_block(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LilypondListener ) ((LilypondListener)listener).exitNote_block(this);
		}
	}

	public final Note_blockContext note_block() throws RecognitionException {
		Note_blockContext _localctx = new Note_blockContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_note_block);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(134); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					setState(134);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case RELATIVE_KW:
						{
						setState(131);
						relative_block();
						}
						break;
					case BAR_KW:
					case CLEF_KW:
					case FERMATA_KW:
					case KEY_KW:
					case MARK_KW:
					case TEMPO_KW:
					case TIME_KW:
						{
						setState(132);
						note_cmd();
						}
						break;
					case NOTE:
						{
						setState(133);
						match(NOTE);
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(136); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,14,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Relative_blockContext extends ParserRuleContext {
		public TerminalNode RELATIVE_KW() { return getToken(LilypondParser.RELATIVE_KW, 0); }
		public TerminalNode NOTE() { return getToken(LilypondParser.NOTE, 0); }
		public TerminalNode LBRACE() { return getToken(LilypondParser.LBRACE, 0); }
		public Note_blockContext note_block() {
			return getRuleContext(Note_blockContext.class,0);
		}
		public TerminalNode RBRACE() { return getToken(LilypondParser.RBRACE, 0); }
		public Relative_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_relative_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LilypondListener ) ((LilypondListener)listener).enterRelative_block(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LilypondListener ) ((LilypondListener)listener).exitRelative_block(this);
		}
	}
